Don't try sending chats to embedding models - distinguish them and only serve them on the /embedding endpoint
